<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">



    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:textSize="20sp"
              android:textStyle="normal"
              android:text="@string/name"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPersonName"
              android:text="@string/name2"

    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="phone"
              android:text="@string/phone"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="number"
              android:text="@string/number"

    />
    <EditText android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:inputType="textPassword"
              android:text="@string/pass"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress"
              android:text="@string/mail"
    />

    <CalendarView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:minDate="2021"
                  android:weekDayTextAppearance="@color/purple_700"

    />

</LinearLayout>