<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <TextView
            android:textColor="@color/purple_700"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hallo"
            android:textSize="23sp"
    />
    <EditText

            android:fontFamily="cursive"
            android:textSize="23sp"
            android:textColorHint="@color/design_default_color_error"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:autofillHints="Введите имя"/>


    <Button android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/run"

            android:text="@string/bottom"
            android:textSize="34sp"/>
    <Switch android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            android:text="@string/switch_on"
    />
    <CheckBox android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:textColor="@color/black"
              android:text="@string/check_1"
    />
    <ToggleButton
            android:id="@+id/tb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="italic"
    />

</LinearLayout>